log/build_2024-09-22_12-17-43/webots_ros2_homework1_python/stderr.log
  File "/home/liam/f24_robotics/install/webots_ros2_homework1_python/lib/python3.10/site-packages/webots_ros2_homework1_python/webots_ros2_homework1_python.py", line 252
    y_vals = [pos[1] for pos in rotated_positions]8
                                                  ^
SyntaxError: invalid syntax

